--- a/public/styles/dev.css
+++ b/public/styles/dev.css
@@ -2,6 +2,11 @@ body {
   padding-top: 65px;
 }
 
+#navUserName {
+  letter-spacing: 0.08em;
+  color: #23263b;
+}
+
 
 .ais-SearchBox-input {
   -webkit-appearance: none;
